--- a/larapp/resources/sass/_custom.scss
+++ b/larapp/resources/sass/_custom.scss
@@ -10,3 +10,29 @@
 	border: 1px solid #ced4da;
 	border-radius: 0.25rem;
 }
+
+.slider {
+	background-color: #1e5f74;
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-size: 100%;
+	height: 480px;
+	position: relative;
+	transition: all 0.5s ease-in;
+	&:hover {
+		background-size: 106%;
+		p {
+			bottom: -20px;
+		}
+	}
+	p {
+		color: rgba( 255, 255, 255, .8);
+		background-color: rgba(0, 0, 0, .8);
+		position: absolute;
+		bottom: -200px;
+		width: 100%;
+		padding: 10px;
+		min-height: 140px;
+		transition: all 0.5s ease-out;
+	}
+}
